# internal/models/models.go
@@ -6,16 +6,28 @@ import (
 
 type User struct {
 	ID        string    `gorm:"type:uuid;primaryKey;" json:"id"`
-	Name      string    `gorm:"type:varchar(100);not null" json:"name"`
+	FirstName string    `gorm:"type:varchar(255);not null"`
+	LastName  string    `gorm:"type:varchar(255);not null"`
 	Email     string    `gorm:"uniqueIndex;not null" json:"email"`
-	Password  string    `gorm:"not null" json:"-"`
 	CreatedAt time.Time `json:"created_at"`
 }
 
+type UserResponse struct {
+	ID        string    `gorm:"type:uuid;primaryKey;" json:"id"`
+	FirstName string    `gorm:"type:varchar(255);not null"`
+	LastName  string    `gorm:"type:varchar(255);not null"`
+	Email     string    `gorm:"uniqueIndex;not null" json:"email"`
+	CreatedAt time.Time `json:"created_at"`
+}
 
 type Response struct {
 	StatusCode   int         `json:"statusCode"`
 	IsSuccessful bool        `json:"isSuccessful"`
 	Message      string      `json:"message"`
 	Data         interface{} `json:"data,omitempty"`
+}
+
+type AuthResponse struct {
+	User  UserResponse `json:"user"`
+	Token string       `json:"token"`
 }
