# internal/user/dto.go
@@ -3,17 +3,11 @@ package user
 // RegisterUserDTO example
 // @Description Payload to register a user
 type RegisterUserDTO struct {
-	Name     string `json:"name" binding:"required"`
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=6"`
-	OTP      string `json:"otp"`
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
+	Email     string `json:"email" binding:"required,email"`
+	OTP string `json:"otp"`
 }
-
-type LoginUserDTO struct {
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required"`
-}
-
 
 type SendOTPRequestDTO struct {
 	Email   string `json:"email" binding:"required"`
@@ -22,5 +16,10 @@ type SendOTPRequestDTO struct {
 
 type VerifyOTPRequestDTO struct {
 	Email string `json:"email"`
+	OTP   string `json:"otp"`
+}
+
+type LoginRequestDTO struct {
+	Email string `json:"email" binding:"required"`
 	OTP   string `json:"otp"`
 }
